# project-to-org

./: .env.example  .gitignore  AGENTS.md  EMACS.md  Eask  PRD.md  README.md  check_parens.py  project-to-org.el  project_to_org.py  pyproject.toml  test.org  test2.org
src/project_to_org/: github_client.py  main.py  org_converter.py
tests/: conftest.py  test_config_persistence.py  test_integration.py  test_integration_edge_cases.py  test_integration_persistence.py  test_persistence_repro.py  test_sync.py  test_unit_scenarios.py  test_user_scenario.py
