[project]
name = "project-to-org"
version = "0.1.0"
description = "Sync GitHub Projects to Org-mode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/ewilderj/project-to-org"
Repository = "https://github.com/ewilderj/project-to-org"

[dependency-groups]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
pythonpath = ["."]
